.provarCaches/00D5f000005vwGkEAI/objects/rstkf__apwhtreturn__c.object
<CustomObject>
    <description>apwhtreturn__c</description>
    <fields>
        <fullName>rstkf__apwhtreturn_cmpno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>Withholding Tax Return</relationshipLabel>
        <relationshipName>apwhtreturns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apwhtreturn_frtxndate__c</fullName>
        <label>From Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__apwhtreturn_number__c</fullName>
        <label>WHT Return Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>rstkf__apwhtreturn_returndate__c</fullName>
        <label>Return Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__apwhtreturn_totamtpaid__c</fullName>
        <label>Return Total Amt Paid</label>
        <summarizedField>rstkf__apwhtretvend__c.rstkf__apwhtretvend_totamtpaid__c</summarizedField>
        <summaryForeignKey>rstkf__apwhtretvend__c.rstkf__apwhtretvend_apwhtreturn__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__apwhtreturn_totxndate__c</fullName>
        <label>Thru Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__apwhtreturn_txntotal__c</fullName>
        <label>Return WHT Total</label>
        <summarizedField>rstkf__apwhtretvend__c.rstkf__apwhtretvend_txntotal__c</summarizedField>
        <summaryForeignKey>rstkf__apwhtretvend__c.rstkf__apwhtretvend_apwhtreturn__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__apwhtreturn_number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__apwhtreturn_number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Withholding Tax Return</label>
    <nameField>
        <label>Withholding Tax Return Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Withholding Tax Return</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>